# CH32V103_Template_ForCLion

./: .gitignore  CH32V103C8T6.ld  CMakeLists.txt  README.md  wch-riscv.cfg
Startup/: startup_ch32v10x.S
User/: main.c
